# welcomeapp

./: .cirrus.yml  .gitignore  README.md  configure.ac  meson.build  meson_options.txt
src/: Makefile.am  consoleapp.c  consoleapp.h  gtkapp.c  gtkapp.h  main.c  msg.h
